fixtures/errors/syntax_error.js
console.log("missing closing paren";
