fixtures/errors/syntax_error.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: Expected ',', got ';'
 --> errors/syntax_error.js:1:36
1 | console.log("missing closing paren";
  |                                    ^

